--- a/views/nuevoProyecto.pug
+++ b/views/nuevoProyecto.pug
@@ -1,16 +1,13 @@
 extends layout
 
+include mixins/crearProyecto
+
 block contenido
-    .contenido-principal 
+    .contenido-principal
         h1 #{nombrePagina}
 
-        if errores
-            each error in errores 
-                .alerta.error= error.texto
-
-        form.agregar-proyecto(action="/nuevo-proyecto" method="POST")
-            .campo
-                label(for="nombre") Nombre Proyecto: 
-                input(type="text" id="nombre" name="nombre" placeholder="Nombre Proyecto")
-            .campoo.enviar
-                input(type="submit" value="Agregar" class="boton")
+        //- pre= vardump(proyecto)
+        if errores 
+            each error in errores
+                .alerta= error.texto
+        +crearProyecto(proyecto)
