--- a/views/tareas.pug
+++ b/views/tareas.pug
@@ -4,10 +4,29 @@ block contenido
     .contenido-principal 
         h1 #{nombrePagina} - #{proyecto.nombre}
 
-        //todo - formulario
+        form.agregar-tareas(action=`/proyectos/${proyecto.url}` method="POST")
+            .campo
+                label(for="tarea") Tarea:
+                input.nombre-tarea(type="text" name="tarea" placeholder="Nombre Tarea")
+            .campo.enviar 
+                input.boton.nueva-tarea(type="submit" value="agregar")
 
-        //todo - listo de pendientes
-        //- pre=vardump(proyectos)
+        .listado-pendientes 
+            ul
+              if tareas.lenght
+                each tarea in tareas
+                    li.tarea 
+                        p=tarea.tarea 
+                        .acciones   
+                            if tarea.estado
+                                i.far.fa-check-circle.completo
+                            else 
+                                i.far.fa-check-circle
+                            i.fas.fa-trash
+              else 
+                p No hay tareas en este proyecto
+
+        //- pre=vardump(tareas)
 
         //acciones que se pueden realizar
         .contenedor-acciones    
