--- a/views/tareas.pug
+++ b/views/tareas.pug
@@ -13,18 +13,18 @@ block contenido
 
         .listado-pendientes 
             ul
-              if tareas.lenght
-                each tarea in tareas
-                    li.tarea 
-                        p=tarea.tarea 
-                        .acciones   
-                            if tarea.estado
-                                i.far.fa-check-circle.completo
-                            else 
-                                i.far.fa-check-circle
-                            i.fas.fa-trash
-              else 
-                p No hay tareas en este proyecto
+                if tareas.length
+                    each tarea in tareas
+                        li.tarea(data-tarea=tarea.id)
+                            p=tarea.tarea 
+                            .acciones   
+                                if tarea.estado
+                                    i.far.fa-check-circle.completo
+                                else 
+                                    i.far.fa-check-circle
+                                i.fas.fa-trash
+                else 
+                    p No hay tareas en este proyecto
 
         //- pre=vardump(tareas)
 
@@ -32,4 +32,3 @@ block contenido
         .contenedor-acciones    
             a(href=`/proyecto/editar/${proyecto.id}` class="boton") Editar Proyecto  
             button#eliminar-proyecto(data-proyecto-url=proyecto.url type="button" class="boton eliminar") Eliminar Proyecto 
-    
