Listo, funcionabilidad des agregar tareas

--- a/views/tareas.pug
+++ b/views/tareas.pug
@@ -27,6 +27,10 @@ block contenido
                     p No hay tareas en este proyecto
 
         //- pre=vardump(tareas)
+        .avance
+            h2 Avance del Proyecto
+            #barra-avance.barra-avance
+                #porcentaje.porcentaje
 
         //acciones que se pueden realizar
         .contenedor-acciones    
