--- a/views/crearCuenta.pug
+++ b/views/crearCuenta.pug
@@ -6,17 +6,20 @@ html(lang="en")
         .contenedor-formulario 
             h1 Crea tu cuenta en UpTask
 
-            if errores 
-                each error in errores
-                    p.error.alerta= error.message 
+            if locals.mensajes 
+                .alertas 
+                    each categoria in Object.keys(locals.mensajes)
+                        each error in mensajes[categoria]
+                            .alerta(class=`${categoria}`)
+                                p=error 
 
             form#formulario.caja.caja-login(method="POST" action="/crear-cuenta")
                 .campo
                     label(for="email") E-mail: 
-                    input(type="text" name="email" placeholder="Tu Email" )
+                    input(type="text" name="email" placeholder="Tu Email" value= email)
                 .campo
                     label(for="password") Password: 
-                    input(type="password" name="password" placeholder="Tu password" ) 
+                    input(type="password" name="password" placeholder="Tu password" value= password) 
                 .campo.enviar
                     input.boton(type="submit" value="Crear Cuenta")
                 .campo 
