UI and route reset password

--- a/views/iniciarSesion.pug
+++ b/views/iniciarSesion.pug
@@ -18,6 +18,8 @@ html(lang="en")
                     input(type="password" name="password" placeholder="Tu password" value= password) 
                 .campo.enviar
                     input.boton(type="submit" value="Iniciar Sesión")
-                .campo 
+                .campo.acciones
                     a(href="/crear-cuenta") Aún no tienes cuenta, crea una!
+
+                    a(href="/restablecer") Olvidaste tu contraseña? 
         script(src="/dist/bundle.js") 
