--- a/views/restablecer.pug
+++ b/views/restablecer.pug
@@ -6,6 +6,13 @@ html(lang="en")
         .contenedor-formulario
             h1= nombrePagina
             p Agrega tu e-mail para restabglecer la contraseña
+            if locals.mensajes 
+                .alertas 
+                    each categoria in Object.keys(locals.mensajes)
+                        each error in mensajes[categoria]
+                            .alerta(class=`${categoria}`)
+                                p=error 
+
             form.caja-login(method="POST" action="/restablecer")
                 .campo
                     label(for="email") E-mail: 
